--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,10 @@
 ---
-title: "New Website"
----
-
-This is a Quarto website.
+title: "New Website, second edition"
+---  
+  
+Home  
+About  
+A New Website  
+This is a Quarto website.  
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
